--- a/ToDoApp/app/src/main/res/values/colors.xml
+++ b/ToDoApp/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="defaultColor">#FFFFFFFF</color>
+    <color name="defaultColor">#000000</color>
 
     <color name="over">#FF0000</color>
 
