--- a/ToDoApp/app/src/main/res/menu/toolbar.xml
+++ b/ToDoApp/app/src/main/res/menu/toolbar.xml
@@ -3,18 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/saveAction"
+        android:id="@+id/saveTasks"
         android:icon="@android:drawable/ic_menu_save"
-        android:title="Item"
-        app:showAsAction="always" />
+        android:title="@string/item"
+        app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/newNote"
+        android:id="@+id/addTask"
         android:icon="@android:drawable/ic_menu_add"
-        android:title="Item"
+        android:title="@string/item"
         app:showAsAction="always" />
     <item
         android:id="@+id/settings"
         android:icon="@android:drawable/ic_menu_manage"
-        android:title="Item"
+        android:title="@string/item"
         app:showAsAction="always" />
 </menu>
