--- a/ToDoApp/app/src/main/res/values/themes.xml
+++ b/ToDoApp/app/src/main/res/values/themes.xml
@@ -13,5 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@color/textBackground</item>
+        <item name="android:datePickerDialogTheme">@style/Picker</item>
+        <item name="android:timePickerDialogTheme">@style/Picker</item>
     </style>
 </resources>
