--- a/ToDoApp/app/src/main/res/layout/activity_edit_list.xml
+++ b/ToDoApp/app/src/main/res/layout/activity_edit_list.xml
@@ -4,11 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".task.EditTaskActivity">
+    tools:context=".taskList.EditListActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
@@ -19,57 +20,12 @@
             android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/editTitle"
+            android:id="@+id/listTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="@string/title"
             android:inputType="textPersonName" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/todo"
-            android:textSize="18sp" />
-
-        <EditText
-            android:id="@+id/editDetail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/editDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="clickDate"
-            android:text="@string/date"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/editTime"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="clickTime"
-            android:text="@string/time"
-            android:textSize="20sp" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -95,5 +51,4 @@
             android:text="@string/cancel" />
 
     </LinearLayout>
-
 </LinearLayout>
