Sign Up, Login, Logout

--- a/ToDoApp/app/src/main/res/menu/toolbar.xml
+++ b/ToDoApp/app/src/main/res/menu/toolbar.xml
@@ -12,4 +12,9 @@
         android:icon="@android:drawable/ic_menu_manage"
         android:title="@string/item"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/account"
+        android:icon="@android:drawable/ic_menu_myplaces"
+        android:title="@string/item"
+        app:showAsAction="always" />
 </menu>
