--- a/ToDoApp/app/src/main/res/layout/list_layout.xml
+++ b/ToDoApp/app/src/main/res/layout/list_layout.xml
@@ -19,6 +19,6 @@
         android:id="@+id/listDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/ic_menu_info_details" />
+        app:srcCompat="@drawable/ic_baseline_arrow_forward_24" />
 
 </LinearLayout>
