--- a/ToDoApp/app/src/main/res/layout/task_layout.xml
+++ b/ToDoApp/app/src/main/res/layout/task_layout.xml
@@ -37,6 +37,12 @@
             android:layout_weight="1"
             android:text="@string/details" />
 
+        <TextView
+            android:id="@+id/location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -49,6 +55,7 @@
             android:id="@+id/isFinished"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
     </LinearLayout>
 
 </LinearLayout>
