--- a/ToDoApp/app/src/main/res/layout/task_layout.xml
+++ b/ToDoApp/app/src/main/res/layout/task_layout.xml
@@ -41,7 +41,8 @@
             android:id="@+id/location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textSize="12sp" />
 
     </LinearLayout>
 
